crates/mun_codegen/src/snapshots/test__compare_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: i64, b: i64) -> bool { a == b }\npub fn not_equal(a: i64, b: i64) -> bool { a != b}\npub fn less(a: i64, b: i64) -> bool { a < b }\npub fn less_equal(a: i64, b: i64) -> bool { a <= b }\npub fn greater(a: i64, b: i64) -> bool { a > b }\npub fn greater_equal(a: i64, b: i64) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [2 x %struct.MunTypeInfo*]

define i1 @equals(i64, i64) {
body:
  %eq = icmp eq i64 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i64, i64) {
body:
  %neq = icmp ne i64 %0, %1
  ret i1 %neq
}

define i1 @less(i64, i64) {
body:
  %less = icmp slt i64 %0, %1
  ret i1 %less
}

define i1 @less_equal(i64, i64) {
body:
  %lesseq = icmp sle i64 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i64, i64) {
body:
  %greater = icmp sgt i64 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i64, i64) {
body:
  %greatereq = icmp sge i64 %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::i64>::name" = private unnamed_addr constant [10 x i8] c"core::i64\00"
@"type_info::<core::i64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"G\13;t\97j8\18\D7M\83`\1D\C8\19%", i8* getelementptr inbounds ([10 x i8], [10 x i8]* @"type_info::<core::i64>::name", i32 0, i32 0), i32 64, i8 8, i8 0 }
@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", i8* getelementptr inbounds ([11 x i8], [11 x i8]* @"type_info::<core::bool>::name", i32 0, i32 0), i32 1, i8 1, i8 0 }
@global_type_table = constant [2 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::i64>", %struct.MunTypeInfo* @"type_info::<core::bool>"]

