crates/mun_codegen/src/snapshots/test__compare_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: u128, b: u128) -> bool { a == b }\npub fn not_equal(a: u128, b: u128) -> bool { a != b}\npub fn less(a: u128, b: u128) -> bool { a < b }\npub fn less_equal(a: u128, b: u128) -> bool { a <= b }\npub fn greater(a: u128, b: u128) -> bool { a > b }\npub fn greater_equal(a: u128, b: u128) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [2 x %struct.MunTypeInfo addrspace(4)*]

define i1 @equals(i128 %0, i128 %1) {
body:
  %eq = icmp eq i128 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i128 %0, i128 %1) {
body:
  %neq = icmp ne i128 %0, %1
  ret i1 %neq
}

define i1 @less(i128 %0, i128 %1) {
body:
  %less = icmp ult i128 %0, %1
  ret i1 %less
}

define i1 @less_equal(i128 %0, i128 %1) {
body:
  %lesseq = icmp ule i128 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i128 %0, i128 %1) {
body:
  %greater = icmp ugt i128 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i128 %0, i128 %1) {
body:
  %greatereq = icmp uge i128 %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@"type_info::<core::u128>::name" = private unnamed_addr constant [11 x i8] c"core::u128\00"
@"type_info::<core::u128>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\E67\1BU\E9k\95\93d\14}\1C\96S\95\F0", [11 x i8]* @"type_info::<core::u128>::name", i32 128, i8 8, i8 0 }
@global_type_table = global [2 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>", %struct.MunTypeInfo addrspace(4)* @"type_info::<core::u128>"]

